# scinikel

./: .env.example  .gitignore  Best_Idea.md  Dockerfile  PLAN.md  README.md  config.env.example  docker-compose.yml  pyproject.toml
data/: graph.json  llm_runtime.json.example
data/samples/: README.md
data/schemas/: ontology.yaml
data/seed/: README.md  documents.json  experiments.json  experiments.xlsx
data/seed/references/: equipment.json  materials.json  teams.json  topics.json
docs/: 3DTODAY_PORTING.md  ARCHITECTURE.md  KB_BACKOFFICE.md  MULTIMODAL_STATUS.md  SEARCH_ROADMAP.md  USABILITY.md
frontend/: index.html
frontend/static/: app.js  style.css
scripts/: build_demo_xlsx.py  fetch_sample_pdfs.sh  seed_data.py  services.sh  setup_venv.sh  start_qdrant.sh  test_chunk_search.py  test_multimodal_ingest.py
src/scinikel/: __init__.py  cli.py  config.py
src/scinikel/agent/: assistant.py  curator.py  structured_answer.py
src/scinikel/api/: app.py
src/scinikel/graph/: __init__.py  base.py  neo4j_store.py  networkx_store.py
src/scinikel/ingest/: __init__.py  graph_materializer.py  loader.py  pdf_parser.py  xlsx_parser.py
src/scinikel/kb/: __init__.py  catalog.py
src/scinikel/models/: __init__.py  entities.py
src/scinikel/query/: engine.py
src/scinikel/search/: bm25.py  chunking.py  dedup.py  embeddings.py  fusion.py  image_embeddings.py  index.py  metadata_boost.py  pdf_images.py  rerank.py  sample_docs.py  snippet.py  text_cleanup.py  vector_db.py
src/scinikel/services/: llm.py  llm_runtime.py  vision_analyzer.py
src/scinikel/storage/: conversations.py
tests/: test_assistant.py  test_chunking.py  test_citations.py  test_conversations.py  test_demo_data.py  test_fusion.py  test_image_search_api.py  test_ingest.py  test_kb_catalog.py  test_llm_runtime.py  test_multimodal.py  test_pdf_images.py  test_query.py  test_sample_docs_index.py  test_search_bm25.py  test_search_giab_chunks.py  test_search_helpers.py  test_search_hybrid.py  test_snippet.py  test_structured_answer.py  test_text_cleanup.py  test_work_mode.py
