[project]
name = "scinikel"
version = "0.1.0"
description = "Научный клубок — knowledge graph + диалоговый ассистент для исследователей"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "networkx>=3.4",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
neo4j = ["neo4j>=5.26.0"]
llm = ["openai>=1.55.0"]

[project.scripts]
scinikel = "scinikel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scinikel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
